--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "extract-text-webpack-plugin": "3.0.0",
     "moment": "2.18.1",
     "normalize.css": "7.0.0",
+    "numeral": "2.0.6",
     "raf": "3.3.2",
     "react": "15.6.1",
     "react-addons-shallow-compare": "15.6.0",
@@ -42,11 +43,11 @@
     "webpack": "3.1.0"
   },
   "devDependencies": {
-    "enzyme-to-json": "3.0.1",
     "enzyme": "3.0.0",
+    "enzyme-to-json": "3.0.1",
     "jest": "20.0.4",
+    "node-sass": "^4.12.0",
     "react-test-renderer": "16.0.0",
-    "webpack-dev-server": "2.5.1",
-    "node-sass": "^4.12.0"
+    "webpack-dev-server": "2.5.1"
   }
 }
